commiting all files
